# Silvanus

./: .gitmodules  CMakeLists.txt  readme.md
cmake/: SystemTarget.cmake
docs/: Soil Sensor Calib.txt
include/: Adafruit_SHT31.hpp  ConfigService.hpp  InputButton.hpp  Silvanus.hpp  SilvanusIO.hpp
resources/Web/: index.html  silvanus.js
service/: silvanus.service  start_service.sh  stop_service.sh
src/: Adafruit_SHT31.cpp  ConfigService.cpp  HttpService.cpp  I2CDevice.cpp  InputButton.cpp  Silvanus.cpp  main.cpp
